[package]
name = "free-patch-gui"
version = "1.0.0"
edition = "2021"
description = "FreePatch 补丁打包工具 - Rust版"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
rfd = "0.15"

[profile.release]
opt-level = "z"
lto = true
strip = true
